// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> Render must match renderBottom() 1`] = `
<div
  className="position-relative text-center"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--bottom mx-auto mb-2"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
</div>
`;

exports[`<Popover /> Render must match renderBottomLeft() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": true,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--bottom-left mb-2"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
</div>
`;

exports[`<Popover /> Render must match renderBottomRight() 1`] = `
<div
  className="position-relative text-right pr-2"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--bottom-right mb-2"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
</div>
`;

exports[`<Popover /> Render must match renderDefault() 1`] = `
<div
  className="position-relative text-center"
>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": true,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large mx-auto mt-2"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match renderDefaultLarge() 1`] = `
<div
  className="position-relative text-center"
>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": true,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large mx-auto mt-2 Popover-message--large"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match renderLeft() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--left"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match renderLeftBottom() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--left-bottom"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match renderLeftTop() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--left-top"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match renderRight() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--right"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match renderRightBottom() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--right-bottom"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match renderRightTop() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--right-top"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match renderTopLeft() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--top-left"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match renderTopRight() 1`] = `
<div
  className="position-relative text-center"
>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": true,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large mx-auto mt-2"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        className="mt-2 text-bold btn btn-outline"
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;
